Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5018

e2fsprogs build failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.6.0, Lustre 2.5.4
    • Lustre 2.6.0
    • None
    • 3
    • 13889

      Looks e2fsprogs failed to build for a long time:

      	CC unix.c
      In file included from /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/lustre/include/lustre/lustre_user.h:51,
                       from /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/lustre/include/lustre/lustreapi.h:46,
                       from ../lib/ext2fs/lfsck.h:10,
                       from unix.c:60:
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:60: error: redefinition of typedef '__s8'
      ../lib/ext2fs/ext2_types.h:26: note: previous declaration of '__s8' was here
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:63: error: redefinition of typedef '__u8'
      ../lib/ext2fs/ext2_types.h:20: note: previous declaration of '__u8' was here
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:67: error: redefinition of typedef '__s16'
      ../lib/ext2fs/ext2_types.h:46: note: previous declaration of '__s16' was here
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:70: error: redefinition of typedef '__u16'
      ../lib/ext2fs/ext2_types.h:32: note: previous declaration of '__u16' was here
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:74: error: redefinition of typedef '__s32'
      ../lib/ext2fs/ext2_types.h:79: note: previous declaration of '__s32' was here
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:77: error: redefinition of typedef '__u32'
      ../lib/ext2fs/ext2_types.h:61: note: previous declaration of '__u32' was here
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:93: error: redefinition of typedef '__s64'
      ../lib/ext2fs/ext2_types.h:113: note: previous declaration of '__s64' was here
      /var/lib/jenkins/workspace/e2fsprogs-master/arch/x86_64/distro/el6/../usr/src/lustre-2.5.57/libcfs/include/libcfs/posix/posix-types.h:96: error: redefinition of typedef '__u64'
      ../lib/ext2fs/ext2_types.h:97: note: previous declaration of '__u64' was here
      	CC e2fsck.c
      make[3]: *** [unix.o] Error 1
      

      Seems those macros defined in lustre posix-types.h are conflicting with ext2_types.h

      e2fsprogs include lustre posix-types.h in following path:
      unix.c -> lfsck.h -> lustreapi.h -> lustre_user.h -> posix-types.h

            adilger Andreas Dilger
            niu Niu Yawei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: