libcfs/include/libcfs/linux/kp30.h
@@ -125,8 +125,7 @@
 
 #define _LWORDSIZE BITS_PER_LONG
 
-#if (defined(__KERNEL__) && defined(HAVE_KERN__U64_LONG_LONG)) || \
-    (!defined(__KERNEL__) && defined(HAVE_USER__U64_LONG_LONG))
+#if defined(HAVE_KERN__U64_LONG_LONG)
 # define LPU64 "%llu"
 # define LPD64 "%lld"
 # define LPX64 "%#llx"
